--- a/UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml
+++ b/UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml
@@ -3,10 +3,20 @@ cost function:
   window begin: '{{window_begin}}'
   window length: $(window_length)
   analysis variables: &3dvars [ua,va,t,delp,ps,sphum,ice_wat,liq_wat,o3mr]
-  geometry: $<< $(geom_inc)
-  background: $<< $(bkg_inc)
-  background error: $<< (berror_inc)
-  observations: $(obs_list)
+  geometry: $<< ${GEOM_BKG}
+  background:
+    datapath: bkg/
+    filetype: gfs
+    filename_core: $(fv3_bkg_time).fv_core.res.nc
+    filename_trcr: $(fv3_bkg_time).fv_tracer.res.nc
+    filename_sfcd: $(fv3_bkg_time).sfc_data.nc
+    filename_sfcw: $(fv3_bkg_time).fv_srf_wnd.res.nc
+    filename_cplr: $(fv3_bkg_time).coupler.res
+    state variables: [ua,va,t,delp,sphum,ice_wat,liq_wat,o3mr,phis,
+                      slmsk,sheleg,tsea,vtype,stype,vfrac,stc,smc,snwdph,
+                      u_srf,v_srf,f10m]
+  background error: $<< ${BERROR_YAML}
+  observations: $<< ${OBS_YAML}
 variational:
   minimizer:
     algorithm: DRIPCG
@@ -14,16 +24,25 @@ variational:
   - ninner: 50
     gradient norm reduction: 1e-10
     test: on
-    geometry: $<< $(geom_inc)
+    geometry: $<< ${GEOM_ANL}
     diagnostics:
       departures: bkgmob
   - ninner: 100
     gradient norm reduction: 1e-10
     test: on
-    geometry: $<< $(geom_inc)
+    geometry: $<< ${GEOM_ANL}
     diagnostics:
       departures: bkgmob
 final:
   diagnostics:
     departures: anlmob
-output: $<< $(out_inc)
+output:
+  filetype: gfs
+  datapath: anl/
+  filename_core: ufs_anl.fv_core.res.nc
+  filename_trcr: ufs_anl.fv_tracer.res.nc
+  filename_sfcd: ufs_anl.sfc_data.nc
+  filename_sfcw: ufs_anl.fv_srf_wnd.res.nc
+  filename_cplr: ufs_anl.coupler.res
+  first: PT0H
+  frequency: PT1H
