--- a/UFS-DA/parm/templates/ufsda_global_atm_3dvar_b.yaml
+++ b/UFS-DA/parm/templates/ufsda_global_atm_3dvar_b.yaml
@@ -1,13 +1,6 @@
 covariance model: SABER
 saber blocks:
-- saber block name: BUMP_NICAS
+- saber block name: ID
   saber central block: true
-  iterative inverse: true
   input variables: &control_vars [psi,chi,t,delp,ps,rh,ice_wat,liq_wat,o3mr]
   output variables: *control_vars
-  active variables: &active_vars [psi,chi,t,ps,rh,liq_wat,o3mr]
-  bump:
-    datadir: staticb
-    verbosity: main
-    strategy: specific_univariate
-
