--- a/UFS-DA/parm/templates/stage.yaml
+++ b/UFS-DA/parm/templates/stage.yaml
@@ -3,3 +3,10 @@ window length: $(window_length)
 observations: $<< ${OBS_YAML}
 background_dir: '{{background_dir}}'
 COMOUT: '{{COMOUT}}'
+background_time: '{{background_time}}'
+dump: ${CDUMP}
+r2d2_obs_db: ${R2D2_OBS_DB}
+r2d2_obs_dump: ${R2D2_OBS_DUMP}
+r2d2_obs_src: ${R2D2_OBS_SRC}
+r2d2_bc_src: ${R2D2_BC_SRC}
+r2d2_bc_dump: ${R2D2_BC_DUMP}
