--- a/UFS-DA/parm/templates/geomges.yaml
+++ b/UFS-DA/parm/templates/geomges.yaml
@@ -1,7 +1,7 @@
 fms initialization:
-  namelist filename: 'fv3files/fmsmpp.nml'
-  field table filename: 'fv3files/field_table'
-akbk: 'fv3files/akbk.nc4'
+  namelist filename: 'Data/fv3files/fmsmpp.nml'
+  field table filename: 'Data/fv3files/field_table'
+akbk: 'Data/fv3files/akbk.nc4'
 # input.nml
 layout:
   - ${layout_x}
@@ -11,8 +11,8 @@ io_layout:
   - ${io_layout_y}
 npx: $(npx_ges)
 npy: $(npy_ges)
-npz: ${LEVS}
+npz: $(npz)
 ntiles: 6
 fieldsets:
-  - fieldset: 'fieldsets/dynamics.yaml'
-  - fieldset: 'fieldsets/ufo.yaml'
+  - fieldset: 'Data/fieldsets/dynamics.yaml'
+  - fieldset: 'Data/fieldsets/ufo.yaml'
