--- a/UFS-DA/parm/templates/stage.yaml
+++ b/UFS-DA/parm/templates/stage.yaml
@@ -10,3 +10,6 @@ r2d2_obs_dump: ${R2D2_OBS_DUMP}
 r2d2_obs_src: ${R2D2_OBS_SRC}
 r2d2_bc_src: ${R2D2_BC_SRC}
 r2d2_bc_dump: ${R2D2_BC_DUMP}
+fv3jedi_stage_files: $<< $(fv3jedi_stage)
+fv3jedi_stage: ${FV3JEDI_STAGE_YAML}
+stage_dir: $(COMOUT)/analysis
