Update yaml and scripts  * UFS-DA/parm/templates/ufsda_global_atm_3dvar_b.yaml - update control vars  * UFS-DA/scripts/exufsda_global_atmos_analysis_post.py - update path to yaml_template  * UFS-DA/scripts/exufsda_global_atmos_analysis_run.sh - update RESTART section  * UFS-DA/ush/update_restart.py - add variables to ingore_vars, add check for upper case variables

--- a/UFS-DA/parm/templates/ufsda_global_atm_3dvar_b.yaml
+++ b/UFS-DA/parm/templates/ufsda_global_atm_3dvar_b.yaml
@@ -2,5 +2,5 @@ covariance model: SABER
 saber blocks:
 - saber block name: ID
   saber central block: true
-  input variables: &control_vars [psi,chi,t,delp,ps,rh,ice_wat,liq_wat,o3mr]
+  input variables: &control_vars [ua,va,t,delp,ps,sphum,ice_wat,liq_wat,o3mr]
   output variables: *control_vars
