Update to keep in sync with JCSDA fv3-jedi development; switch to EMC ufo repo  * UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml - add datetime to background section  * UFS-DA/src/CMakeLists.txt - checkout feature/ufsda from EMC ufo repo  * UFS-DA/ush/ufsda/ufs_yaml.py - define fv3_bkg_datetime

--- a/UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml
+++ b/UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml
@@ -7,6 +7,7 @@ cost function:
   background:
     datapath: Data/bkg/
     filetype: gfs
+    datetime: $(fv3_bkg_datetime)
     filename_core: $(fv3_bkg_time).fv_core.res.nc
     filename_trcr: $(fv3_bkg_time).fv_tracer.res.nc
     filename_sfcd: $(fv3_bkg_time).sfc_data.nc
