Update to use static B  * UFS-DA/parm/templates/stage.yaml - add staticb_dir  * UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml - output latlon analysis increment  * UFS-DA/parm/templates/ufsda_global_atm_3dvar_b.yaml - add saber blocks for static B  * UFS-DA/scripts/exufsda_global_atmos_analysis_prep.py - stage static B files  * UFS-DA/scripts/exufsda_global_atmos_analysis_run.sh - update INCPY scripting, create loginc file  * UFS-DA/ush/ufsda/stage.py - stage static B files, change anl to physical directory instead of link  * UFS-DA/ush/ufsda/ufs_yaml.py - add staticb_dir to cycle_dict

--- a/UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml
+++ b/UFS-DA/parm/templates/ufsda_global_atm_3dvar.yaml
@@ -37,6 +37,11 @@ variational:
 final:
   diagnostics:
     departures: anlmob
+  increment:
+    output:
+      filetype: latlon
+      filename: Data/anl/atminc_latlon.
+    geometry: $<< ${GEOM_ANL}
 output:
   filetype: fms restart
   datapath: Data/anl/
