--- a/UFS-DA/parm/templates/stage.yaml
+++ b/UFS-DA/parm/templates/stage.yaml
@@ -2,6 +2,7 @@ window begin: '{{window_begin}}'
 window length: $(window_length)
 observations: $<< ${OBS_YAML}
 background_dir: '{{background_dir}}'
+staticb_dir: '{{staticb_dir}}'
 COMOUT: '{{COMOUT}}'
 background_time: '{{background_time}}'
 dump: ${CDUMP}
