--- a/GDAS-validation/gdas_config/config_gsi.yaml
+++ b/GDAS-validation/gdas_config/config_gsi.yaml
@@ -1,8 +1,8 @@
 base:
   ACCOUNT: da-cpu
   HPSS_PROJECT: emc-da
-  DO_JEDIATMVAR: NO
-  DO_JEDIATMENS: NO
-  DO_JEDIOCNVAR: NO
-  DO_JEDILANDDA: NO
-  DO_MERGENSST: NO
+  DO_JEDIATMVAR: "NO"
+  DO_JEDIATMENS: "NO"
+  DO_JEDIOCNVAR: "NO"
+  DO_JEDILANDDA: "NO"
+  DO_MERGENSST: "NO"
