--- a/GDAS-validation/gdas_config/config_jedi.yaml
+++ b/GDAS-validation/gdas_config/config_jedi.yaml
@@ -1,8 +1,8 @@
 base:
-  DO_JEDIATMVAR: YES
-  DO_JEDIATMENS: NO
-  DO_JEDIOCNVAR: NO
-  DO_JEDILANDDA: NO
-  DO_MERGENSST: NO
+  DO_JEDIATMVAR: "YES"
+  DO_JEDIATMENS: "NO"
+  DO_JEDIOCNVAR: "NO"
+  DO_JEDILANDDA: "NO"
+  DO_MERGENSST: "NO"
   ACCOUNT: da-cpu
   HPSS_PROJECT: emc-da
